# django5course

./: .dockerignore  .env.docker  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  start-django.sh  tailwind.config.js
app/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_create_superuser.py  0003_article_creator_alter_article_word_count.py  0004_alter_article_content_alter_article_created_at_and_more.py  0005_alter_article_options.py  0006_alter_userprofile_options_alter_userprofile_managers_and_more.py  0007_alter_userprofile_options.py
django5course/: asgi.py  settings.py  urls.py  wsgi.py
locale/es/LC_MESSAGES/: django.mo  django.po
static/: input.css  output.css
templates/: base.html
templates/account/: login.html  signup.html
templates/account/email/: base_message.txt  email_confirmation_message.txt
templates/allauth/elements/: button.html  field.html  provider.html
templates/allauth/layouts/: base.html
templates/app/: article_create.html  article_delete.html  article_update.html  article_view.html  authors.html  base.html  home.html  public.html
templates/app/layouts/: base_form.html
tests/: conftest.py  test_authors.py  test_homepage.py  test_signup.py
tests/pages/: articles.py  auth.py
