[tool.poetry]
name = "django5course"
version = "0.1.0"
description = ""
authors = ["Sean House <33880135+sean-house@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.0.1"
django-allauth = {extras = ["socialaccount"], version = "^65.2.0"}
psycopg = "^3.2.3"
dj-database-url = "^2.3.0"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff]
line-length = 120
